--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -68,6 +68,53 @@ a {
   background: transparent !important;
 }
 
+.bg-sec3 {
+  background: url(../../public/assets/backgrounds/bg-hero.mp4);
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-sec1 {
+  background-image: url(../../public/assets/backgrounds/bg-section-01.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.bg-sec2 {
+  background-image: url(../../public/assets/backgrounds/bg-section-02.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-sec4 {
+  background-image: url(../../public/assets/backgrounds/bg-section-04.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-sec5 {
+  background-image: url(../../public/assets/backgrounds/bg-section-05.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.fullscreen {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  min-height: 100vh !important;
+}
+
 .arrow-hover {
   overflow: hidden;
 
