--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -97,22 +97,22 @@ a {
   background-position: center;
 }
 
-.fullscreen {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  -webkit-box-align: center !important;
-  -ms-flex-align: center !important;
-  -webkit-align-items: center !important;
-  align-items: center !important;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  min-height: 100vh !important;
+@media screen and (max-width: 1024px) {
+  .fp-tableCell {
+    height: 40rem !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .fp-tableCell {
+    height: 24rem !important;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .fp-tableCell {
+    height: 14rem !important;
+  }
 }
 
 .arrow-hover {
