--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -69,7 +69,7 @@ a {
 }
 
 .bg-sec3 {
-  background: url(../../public/assets/backgrounds/bg-hero.mp4);
+  background: url(../../public/assets/backgrounds/bg-hero.mp4) !important;
   background-size: cover;
   background-position: center;
 }
