--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -16,7 +16,15 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Barlow", sans-serif;
+}
+
+.din {
+  font-family: "Din", sans-serif;
+}
+
+.dinBold {
+  font-family: "DinBold", sans-serif;
 }
 
 // .container-xxxl {
@@ -59,6 +67,10 @@ a {
   text-decoration: unset;
 }
 
+.bg-footer {
+  background-color: #2d3436;
+}
+
 .bg-cover {
   background-size: cover;
   background-position: center;
@@ -93,6 +105,12 @@ a {
 
 .bg-sec5 {
   background-image: url(../../public/assets/backgrounds/bg-section-05.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-about {
+  background-image: url(../../public/assets/backgrounds/bg-about.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -259,7 +277,7 @@ a {
 }
 
 .display-7 {
-  font-size: 1.9 rem !important;
+  font-size: 1.8rem !important;
 }
 // nav-links
 
@@ -336,6 +354,8 @@ a {
   border-radius: 10rem;
 }
 
+/*
+
 #fp-nav ul li a.active span,
 #fp-nav ul li:hover a.active span,
 .fp-slidesNav ul li a.active span,
@@ -351,6 +371,8 @@ a {
   width: 0.4rem;
   margin: -0.2rem 0 0 -0.2rem;
 }
+
+*/
 
 // pills-line
 
@@ -410,4 +432,8 @@ a {
       }
     }
   }
+}
+
+#fp-nav {
+  display: none !important;
 }
