--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -91,6 +91,14 @@ a {
   background-size: cover;
   background-position: center;
 }
+
+.bg-sec1-mb {
+  background-image: url(../../public/assets/backgrounds/bg-section-01.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .bg-sec2 {
   background-image: url(../../public/assets/backgrounds/bg-section-02.jpg);
   background-size: cover;
@@ -129,8 +137,12 @@ a {
 
 @media screen and (max-width: 440px) {
   .fp-tableCell {
-    height: 14rem !important;
+    height: 100vw !important;
   }
+}
+
+full-bleed {
+  overflow: hidden;
 }
 
 .arrow-hover {
