--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -177,6 +177,17 @@ a {
   }
 }
 
+.project {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+.full-breed {
+  overflow: hidden;
+}
+
 .arrow-hover {
   overflow: hidden;
 
