--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
-
-
-@import 'settings';
+@import "settings";
 @import "~bootstrap/scss/bootstrap";
-@import 'animation';
+@import "animation";
 @import "custom";
+@import "@vime/core/themes/default.css";
