--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -492,3 +492,9 @@ a {
 vm-player[video] {
   width: 60vw !important;
 }
+
+@media screen and (max-width: 768px) {
+  vm-player[video] {
+    width: 80vw !important;
+  }
+}
