About page updated

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -157,7 +157,7 @@ a {
 }
 
 .bg-about {
-  background-image: url(../../public/assets/backgrounds/bg-about.jpg);
+  background-image: url(../../public/assets/backgrounds/bg-about.png);
   background-size: cover;
   background-position: center;
 }
